# perplexity_clone

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  Dockerfile.render  main.py  pyproject.toml  render.yaml  requirements.txt  start.sh  startup.sh  streamlit_app.py  supervisord.conf
.github/workflows/: deploy.yml  main_perplexityclone.yml
app/: api.py
config/: config.py  system_prompt.py
document_processing/: processor.py
embeddings/: embedder.py
files/: __init__.py  file_manager.py
rag/: agents.py  graph_deep.py  rag_state.py  router.py
tools/: browse_tool.py  citation_tool.py  followup_tool.py  image_tavily.py  knowledge_panel.py  memory_tool.py  name_extractor.py  name_tool.py  reranker_tool.py  search_tool.py  summarizer_tool.py  wiki_tool.py
vectorstore/: store.py
